--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
+<!--
     <parent>
         <groupId>com.tacitknowledge.maven.plugins</groupId>
         <artifactId>tk-maven-plugins</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
+-->
 
+    <groupId>com.tacitknowledge.maven.plugins</groupId>
     <artifactId>tk-maven-wait-plugin</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>maven-plugin</packaging>
